// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Declaration Partial: should compile a const with default value 1`] = `
" \`Const\` **stringConstWithDefaultValue**: \`\`\\"hello\\"\`\`

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile an undefined declaration 1`] = `
" **undefinedNumberDeclaration**: \`number\`

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile any function type 1`] = `
" **AnyFunctionType**<\`A\`\\\\>: (...\`input\`: \`any\`[]) => [\`A\`]( A )

#### Type parameters

{ typeParameterTablePartial }

#### Type declaration

{ signaturePartial }

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile callable declaration 1`] = `
" **callableDeclaration**: \`Object\`

#### Call signature

{ signaturePartial }

#### Type declaration

{ propertyTablePartial }

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile declaration with double underscores in name and value 1`] = `
" \`Const\` **\\\\_\\\\_DOUBLE\\\\_UNDERSCORES\\\\_DECLARATION\\\\_\\\\_**: typeof [\`__DOUBLE_UNDERSCORES_DECLARATION__\`]( __DOUBLE_UNDERSCORES_DECLARATION__ )

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile enum delcaration 1`] = `
" **EnumDeclarations**: \`Object\`

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile function declaration 1`] = `
" **functionDeclaration**: (\`someArg\`: \`number\`) => \`boolean\`

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile indexable declaration 1`] = `
" **indexableDeclaration**: \`Object\`

{ indexSignatureTitlePartial }

#### Type declaration

{ propertyTablePartial }

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile object literal cast as a const 1`] = `
" \`Const\` **objectLiteralAsConstDeclaration**: \`Object\`

Comments

**\`param\`** Comment for object.

**\`param\`** Comment for Prop1.

**\`param\`** Comment for Prop2.


#### Type declaration

{ propertyTablePartial }

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile object literal declaration 1`] = `
" \`Const\` **objectLiteralDeclaration**: \`Object\`

**\`param\`** description for valueX

**\`param\`** description for valueZ

**\`param\`** description for valueY


#### Type declaration

{ propertyTablePartial }

{ sourcesPartial }"
`;

exports[`Declaration Partial: should compile type literal declaration 1`] = `
" **typeLiteralDeclaration**: \`Object\`

#### Type declaration

{ propertyTablePartial }

{ sourcesPartial }"
`;
